--- a/tablas.html
+++ b/tablas.html
@@ -28,7 +28,7 @@ Las palabras de su padre, así como la experiencia vivida con los clavos, hicier
 <table border="2">
 	<tr>
 		<th><h1>hipervinculos</h1></th>
-		<th><a href="portada.html">ir a la portada</a></th>
+		<th><a href="index.html">ir a la portada</a></th>
 	
 	</tr>
 
